devices/vector/gdevpdf.c
@@ -2903,12 +2903,10 @@ pdf_close(gx_device * dev)
                     pdf_write_page(pdev, pagecount++);
 
                     stream_puts(pdev->strm, "%%EndPageSetup\n");
-                    stream_puts(pdev->strm, "/pagesave save def\n");
                     pprintld1(pdev->strm, "%ld 0 obj\n", pres->object->id);
                     code = cos_write(pres->object, pdev, pres->object->id);
                     stream_puts(pdev->strm, "endobj\n");
                     pres->object->written = true;
-                    stream_puts(pdev->strm, "pagesave restore\n%%PageTrailer\n");
                 }
         }
         code1 = pdf_free_resource_objects(pdev, resourcePage);
